[gd_scene load_steps=14 format=3 uid="uid://dgoucserhky7y"]

[ext_resource type="Script" path="res://scripts/ui/room.gd" id="1_lb18j"]
[ext_resource type="PackedScene" uid="uid://nh3cp22bbbym" path="res://scenes/ui/background.tscn" id="1_plp4p"]
[ext_resource type="Texture2D" uid="uid://dkqopvucgfqtw" path="res://assets/textures/ui/main_menu.png" id="3_v1vl6"]
[ext_resource type="Script" path="res://scripts/ui/copied_icon.gd" id="4_1ahr2"]
[ext_resource type="Script" path="res://scripts/ui/change_scene_button.gd" id="4_7gsyo"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0qnkn"]
atlas = ExtResource("3_v1vl6")
region = Rect2(81, 33, 14, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_3sfrs"]
atlas = ExtResource("3_v1vl6")
region = Rect2(97, 33, 14, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_o0wo2"]
atlas = ExtResource("3_v1vl6")
region = Rect2(57, 73, 7, 7)

[sub_resource type="Animation" id="Animation_i5ai7"]
resource_name = "pop_up"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position_offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(0.466516, 0.297302),
"update": 0,
"values": [Vector2(0, 10), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g0p10"]
_data = {
"pop_up": SubResource("Animation_i5ai7")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_fp03o"]
atlas = ExtResource("3_v1vl6")
region = Rect2(64, 48, 17, 16)
margin = Rect2(-1.025, 0.895, 0, -3)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_dpycn"]
load_path = "res://.godot/imported/main_menu.png-7f72534a6012ad7b37d654992693f0f5.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_l864v"]
atlas = SubResource("CompressedTexture2D_dpycn")
region = Rect2(83, 49, 13, 14)

[node name="RoomScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lb18j")

[node name="Background" parent="." instance=ExtResource("1_plp4p")]
layout_mode = 1

[node name="RoomIdLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -188.0
offset_top = 40.0
offset_right = 132.0
offset_bottom = 100.0
grow_horizontal = 2
theme_type_variation = &"HeaderMedium"
text = "ID: ROOMID"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CopyButton" type="TextureButton" parent="RoomIdLabel"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 28.0
offset_top = 13.0
offset_right = 59.0
offset_bottom = -16.0
grow_horizontal = 0
grow_vertical = 2
texture_normal = SubResource("AtlasTexture_0qnkn")
texture_pressed = SubResource("AtlasTexture_3sfrs")
texture_hover = SubResource("AtlasTexture_0qnkn")
texture_disabled = SubResource("AtlasTexture_0qnkn")
texture_focused = SubResource("AtlasTexture_0qnkn")
stretch_mode = 5

[node name="CopiedIcon" type="TextureRect" parent="RoomIdLabel/CopyButton"]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 20.0
offset_bottom = 20.0
texture = SubResource("AtlasTexture_o0wo2")
script = ExtResource("4_1ahr2")
position_offset = Vector2(0, 10)

[node name="AnimationPlayer" type="AnimationPlayer" parent="RoomIdLabel/CopyButton/CopiedIcon"]
libraries = {
"": SubResource("AnimationLibrary_g0p10")
}

[node name="PlayersList" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.425
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_right = 200.0
offset_bottom = -160.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="ButtonsContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -140.0
offset_right = 200.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 40
alignment = 1

[node name="BackButton" type="Button" parent="ButtonsContainer"]
custom_minimum_size = Vector2(150, 100)
layout_mode = 2
icon = SubResource("AtlasTexture_fp03o")
icon_alignment = 1
expand_icon = true
script = ExtResource("4_7gsyo")
scene_path = "res://scenes/ui/multiplayer_menu.tscn"

[node name="ReadyButton" type="Button" parent="ButtonsContainer"]
custom_minimum_size = Vector2(150, 100)
layout_mode = 2
toggle_mode = true
icon = SubResource("AtlasTexture_l864v")
icon_alignment = 1
expand_icon = true

[connection signal="pressed" from="RoomIdLabel/CopyButton" to="." method="_on_copy_button_pressed"]
[connection signal="visibility_changed" from="RoomIdLabel/CopyButton/CopiedIcon" to="RoomIdLabel/CopyButton/CopiedIcon" method="_on_visibility_changed"]
[connection signal="pressed" from="ButtonsContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="toggled" from="ButtonsContainer/ReadyButton" to="." method="_on_ready_button_toggled"]
